--- a/semestralka/tanky/views/css/CSS_default.css
+++ b/semestralka/tanky/views/css/CSS_default.css
@@ -1,34 +1,62 @@
-/*
 body {
-    background-image: url("../images/Background.jpg"); 
-    background-position: top;
+    background-image: rgba(150,150,150,0.5), url(../images/Background.jpg);
     background-size: cover;
-    background-repeat: no-repeat;
+    margin: 0;
 }
-*/
+
 header {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.1)), url(../images/himmel.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.05)), url(../images/himmel.jpg);
     background-repeat: no-repeat;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
     background-position: center;
-    max-width: 100%;
+    
+}
+.myContainer {
+    background-color: rgba(0,0,0,0.5);
+    margin: 0 300 50 300; 
+    
 }
 
 .loginPanel {
+    color: #d9d9d9;
+    padding: 10;
+/*    position: fixed;
+    top: 0;
+    overflow: hidden;
+*/    
+    background-color: rgba(0,0,0,0.3);
     width: 100%;
-    height: 20px;
-    margin: 0;
-    padding: 0;
-    background-color: BLACK;
+}
+
+.loginPanel a { 
+    color: rgba(255,255,50,0.5);
+}
+
+.loginPanel a:hover {
+    color: rgb(255,255,50);
+}
+
+#login {
+    float: right;
+    font-size: 15px;
+    color: white;
+    text-decoration: none;
+    padding: 0 5px;
+}
+
+#login:hover {
+    border-color: rgb(255,255,50);
+    border-style: groove;
 }
 
 .title {
     color: rgb(200, 200, 200);
     text-shadow: 0 0 30px black;
     font-size: 4vw;
+    margin-top: 20;
     font-family: serif;
     cursor: default;
     font-weight: BOLD;
@@ -49,7 +77,7 @@ header {
 
 .myNav li {
     display: inline-block;
-    padding: 20px 0;
+    padding: 0 0 20 0;
     
 }
 
@@ -66,7 +94,9 @@ header {
 
 .myNav li a:hover {
     border: 1px solid white;
+    background-color: rgba(0, 0, 0, 0.5);
 }
+
 /*
 #login {
     color: grey;
