+ přihlašování a registrace uživatelů

--- a/semestralka/tanky/views/css/CSS_default.css
+++ b/semestralka/tanky/views/css/CSS_default.css
@@ -46,10 +46,11 @@ header {
     text-decoration: none;
     padding: 0 5px;
 }
-
-#login:hover {
-    border-color: rgb(255,255,50);
-    border-style: groove;
+#logout {
+    float: right;font-size: 15px;
+    color: grey;
+    text-decoration: none;
+    padding: 0 5px;
 }
 
 .title {
