--- a/semestralka/tanky/views/css/CSS_default2.css
+++ b/semestralka/tanky/views/css/CSS_default2.css
@@ -8,11 +8,12 @@ body {
     -o-background-size: cover;
     background-size: cover;
     background-position: top;
+    background-attachment: fixed;
 }
 
 #title {
     color: rgb(255,150,0);
-    font-size: 30px;
+    font-size: 2vw;
     font-weight: bold;
     text-align: center;
     padding: 20;
@@ -32,15 +33,92 @@ body {
     background-color: rgba(0,0,0,0.9);
     margin: auto;
     padding: 1% 0 0;
-    width: 50%;
+    width: 60%;
+    border:5px groove orange;
+    text-align: center;
+}
+
+button {
+    font-size: 1.2vw;
+}
+
+.homeLink {
+    margin: 0 0 20 0;
+    font-size: 1.8vw;
+    text-decoration: none;
+    padding: 10;
+    position: fixed;
+    top: 10;
+    right: 10;
+}
+
+.items {
+    padding: 30px;
+}
+
+.items output {
+    color: red;
+    font-size: 1.2vw;
+}
+
+.items fieldset {
+    font-weight: bold;
+}
+
+.items legend {
+    color: yellow;
+    font-size: 1.5vw;
 }
 
 .userInfo {
+    font-size: 1.7vw;
+    border-bottom: 1px solid yellow;
+    padding: 3%;
+    margin: 0 auto;   
+    overflow: auto;
+    text-align: left;
+}
+
+#userInfoChangeBtn {
+    background-color: #404040;
+    border: none;
+    float: right;
+    margin-right: 3%;
+}
+
+#userInfoChangeBtn a {
+    color: #cc7a00;
+}
+
+#userInfoChangeBtn a:hover {
+    color: #ff9900;
+}
+
+#listOfContributionsBtn {
+    margin: 20;
+}
+
+tr {
+    font-size: 1.5vw;
+    margin: 20;
+}
+
+td {
+    color: #bfbfbf;
+}
+
+.value {
     color: white;
-    border: 2px solid yellow;
-    padding: 2%;
-    margin: 0 auto;
-    width: 50%;
+    padding-left: 20;
+}
+.value2 {
+    color: black;
+    padding-left: 20;
+}
+
+#userAdded {
+    color: white;
+    font-size: 1.4vw;
 }
 
 .form {
@@ -77,11 +155,11 @@ body {
 }
 
 #submitBtn {
-    font-size: 18px;
+    font-size: 1.2vw;;
     border: 0;
     margin-top: 10px;
     background-color: rgba(255,150,0,0.8);
-    
+    float: left;
 }
 
 #submitBtn:hover {
