--- a/semestralka/tanky/views/css/CSS_default.css
+++ b/semestralka/tanky/views/css/CSS_default.css
@@ -70,11 +70,13 @@ header {
 
 .myContainer {
     background-color: rgba(0,0,0,0.6);
-    margin:0 15% 3%;
+    margin: 0 15% 3%;
+    padding: 10px;
     border-color: white;
     border-style: double;
     height: auto;
     overflow: auto;
+    text-align: center;
 }
 
 .article {
@@ -218,6 +220,20 @@ h2 {
     background-color: white;
 }
 
+#addNewBtn {
+    font-size: 18px;
+    text-align: center;
+    text-decoration: none;
+    color: deepskyblue;
+    background-color: black;
+    border: 3px dashed red;
+    padding: 4px;
+    margin: 2%;
+}
+
+#addNewBtn:hover {
+    border-color: orange;
+}
 
 .filter {
     color: white;
@@ -272,8 +288,9 @@ h2 {
 
 table {
     color: white;
-    font-size: 1.2vw;
+    font-size: 20px;
     width: 50%;
+    margin: 10 auto;
 }
 
 tr td {
@@ -347,8 +364,12 @@ tr td {
     background-image: linear-gradient(rgba(255, 150, 0, 0.8), rgba(0, 0, 0, 0.8));
 }
 
+#ratePanel rateBtn {
+    color: white;
+}
+
 #noTableRow {
-    float: right;
+    color: white;
     border: none;
     background-color: inherit;
 }
@@ -381,6 +402,7 @@ tr td {
     text-align: center;
     margin: 5%;
     padding: 5px;
+    border: 2px double white;
 }
 
 #prispevekLbl {
